src/App.css
/* ... */
.donate-btn {
  background-color: #ccd5ae;
  margin: 1em 0 2rem 0;
  border-radius: 12px;
  padding: 0.8rem;
  border: none;
  transition: all 0.3s ease 0s;
  font-weight: bold;
  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
  cursor: pointer;
}

.donate-btn:hover {
  color: #ffffff;
  background-color: #d4a373;
  box-shadow: 0px 15px 20px rgba(204, 213, 174, 0.4);
  color: #fff;
  transform: translateY(-3px);
}

.donate-btn:focus {
  outline: none;
}

.wrapping {
  margin-bottom: 1rem;
}

.wrapping > p:last-child {
  grid-column: 2;
  grid-row: 1/2;
  align-self: start;
}

@media only screen and (min-width: 800px) {
  .individualItem-card {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    overflow: auto;
  }

  .individualItem-item-image {
    display: flex;
    border-radius: 12px;
  }

  .wrapping {
    display: flex;
    flex-direction: column;
    padding: 2rem;
    justify-content: flex-start;
    align-content: flex-start;
  }

  .wrapping p {
    align-self: flex-start;
    margin: 0.5rem 0;
  }

  .individualItem-desktop-description {
    margin: 2rem 10rem;
  }
}

.individualItem-desktop-description {
  margin: 2rem 1.5rem;
}

.individualItem-desktop-info {
  margin: 2rem 1.5rem;
}

.itemsList {
  display: grid;
  grid-template-columns: 300px 300px 300px;
  /* margin: 2rem 5rem 1rem 5rem; */
  margin: 1rem;
  gap: 2rem;
  justify-content: center;
  align-items: center;
}

@media only screen and (max-width: 700px) {
  .itemsList {
    grid-template-columns: 180px 180px 180px;
  }
}

.itemsListPicture {
  justify-self: center;
}

.itemsListTitle {
  margin-left: 2.4rem;
}

.itemsListTitle p {
  text-align: start;
  text-decoration: none;
  color: #000;
  margin: 0.2rem 0.4rem;
}

.itemsListTitle :nth-child(2) {
  font-weight: bold;
  text-decoration: none;
  color: #000;
  margin: 0.2rem 0;
}

.itemsListPrice {
  font-size: 2rem;
  font-weight: bold;
  text-align: center;
  text-decoration: none;
  color: #000;
  margin: 0.2rem 0;
  justify-self: center;
  align-self: center;
}

.itemsListPrice button {
  background-color: #ccd5ae;
  margin: 1em;
  border-radius: 12px;
  padding: 0.5rem;
  border: none;
  cursor: pointer;
  align-self: center;
}

.itemsListPrice button:hover {
  color: #ffffff;
  background-color: #d4a373;
  color: #fff;
  transform: translateY(-3px);
}

.itemsListPrice button:focus {
  outline: none;
}
.dashboard-individual-items {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

@media only screen and (max-width: 600px) {
  .itemsList {
    grid-template-columns: 170px 170px;
    grid-template-rows: 1fr 0.1fr;
    justify-content: center;
    margin: 0.5rem 0;
    width: 95%;
    border: 1px solid #d4a373;
  }

  .itemsListPicture {
    justify-self: center;
    margin-top: 0.5rem;
  }

  .itemsListTitle {
    justify-self: start;
    align-self: start;
    margin: 0.5rem 0;
  }

  .itemsListTitle p {
    margin: 0;
  }

  .itemsListPrice {
    display: flex;
    flex-direction: column;
    margin: -1.5rem 0 1.5rem 1.3rem;
    grid-column: 2;
    align-self: start;
    justify-self: start;
  }

  .itemsListPrice-amount {
    margin: -2rem 0rem 0rem -1.5rem;
  }

  .itemsListPrice button {
    align-self: start;
    margin: 0.5rem 1rem 1rem 0rem;
  }
  .thumbnailImageStyle {
    height: 120px;
    width: 120px;
    align-self: center;
  }
}

.navigationButtons {
  display: flex;
  flex-wrap: wrap;
  margin: 1rem;
  justify-content: center;
  align-items: flex-start;
}

.navigationButtons button {
  margin: 0 0.8rem 0 0.8rem;
  padding: 12px;
  font-size: 0.8rem;
  background-color: #faedcd;
  border: none;
  border-radius: 6px;
  cursor: pointer;
}

.navigationButtons button:hover {
  background-color: #d4a373;
  color: #fff;
}

.navigationButtons button:focus {
  outline: none;
}
.arrow {
  display: inline;
}

.nonHoveredHeader {
  background-color: #faedcd;
}
.hoveredHeader {
  background-color: #d4a373;
  color: #fff;
}

.nonHoveredSortByHeader {
  background-color: #faedcd;
}

.hoveredSortByHeader {
  background-color: #d4a373;
  color: #fff;
}

.nonHoveredOrderHeader {
  background-color: #faedcd;
}
.hoveredOrderHeader {
  background-color: #d4a373;
  color: #fff;
}

.sort-data-items-wrapper {
  display: flex;
  /* margin: 0.5rem; */
  justify-content: space-around;
  align-content: center;
  align-items: flex-start;
}

.sort-data-item {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  cursor: pointer;
  width: 50%;
  background-color: #faedcd;
  border-radius: 6px;
}

.sort-data-item {
  text-align-last: center;
}

.sort-data-item-cats {
  text-align-last: center;
}
.sort-data-item-age {
  text-align-last: center;
  text-align: center;
}
.sort-data-item-price {
  text-align-last: center;
  text-align: center;
}

.sort-data-item:hover {
  background-color: #d4a373;
  color: #fff;
}

.select-box-gap {
  margin: 0 0.8rem;
}

@media screen and (max-width: 630px) {
  .sort-data-items-wrapper {
    margin: 0.8rem;
  }
}

@media screen and (max-width: 600px) {
  .navigationButtons {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr;
  }

  .dash-navigationButtons {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 1rem;
  }

  .dash-navigationButtons {
    justify-self: center;
  }

  .sort-data-items-wrapper {
    margin: 0.2rem;
  }
}

.pagination {
  display: inline-block;
  margin-bottom: 10px;
}

.p-button {
  border: none;
  border-radius: 3px;
  color: black;
  background-color: rgb(250, 237, 205);
  padding: 6px 12px;
  text-decoration: none;
}

#button-background {
  background-color: #99582a;
  color: white;
  border: none;
  border-radius: 3px;
  padding: 6px 12px;
  margin: 2px;
}

#p-Button-background {
  background: rgb(250, 237, 205);
  padding: 6px 12px;
  margin: 2px;
}
/* ... */

